refactor: redirection message and ui builder

--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div class="mt-4">
-  <h4 class="text-center">更改 {{email}} 的密码</h4>
+
+  <h4 class="text-center">更改 {{ heading }} 的密码</h4>
 
   {# Show invalid token message #}
   {% include "partials/alert-danger.html" %}
@@ -20,6 +21,7 @@
       type="submit"
       data-disable-with="保存新密码...">重置密码</button>
   </form>
+
 </div>
   
 {% endblock %}
