refactor: extends Error

--- a/views/error.html
+++ b/views/error.html
@@ -3,7 +3,10 @@
 {% block main %}
 
 <div class="jumbotron">
+  {% if error.status %}
   <h1>{{error.status}}</h1>
+  {% endif %}
+  
   <p>{{error.message}}</p>
 
   {% if not env.isProduction %}
