--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -66,7 +66,7 @@
             <span>{{address.postcode}}</span>
         </div>
       </div>
-      <a href="{{ address.updateLink }}" class="pl-2 pr-2">修改</a>
+      <a href="{{ address.updateAddressLink }}" class="pl-2 pr-2">修改</a>
     </div>
   </div>
   {% endif %}
