feat: build form fields in code rather than in templates

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -75,7 +75,7 @@
 
   <footer class="o-footer o-footer--theme-dark">
     <div class="container">
-      <div class="row">
+      <div class="row" id="footer">
         {% for group in env.footer %}
           <div class="col-6 col-md-3 col-lg-2">
   
@@ -111,6 +111,7 @@
   {% else %}
   <script src="/bootstrap.native/dist/bootstrap-native-v4.js"></script>
   <script src="/script/main.js"></script>
+  <script src="/script/reader-app.js"></script>
   {% endif %}
 </body>
 </html>
