--- a/views/widget/button.html
+++ b/views/widget/button.html
@@ -1,6 +1,4 @@
 <button 
-  class="{{ button.classNames }}"
-  type="{{ button.type }}"
-  {% if button.disableWith %}
-    data-disable-with="{{ button.disableWith }}"
-  {% endif %}>{{ button.text }}</button>
+  class="btn btn-primary btn-block"
+  type="submit"
+  data-disable-with="Sumitting...">Submit</button>
