--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -3,23 +3,17 @@
 {% block content %}
 <div class="mt-4">
 
-  <h4 class="text-center">更改 {{ heading }} 的密码</h4>
+  <h4 class="text-center">{{ heading }}</h4>
 
-  {# Show invalid token message #}
-  {% include "partials/alert-danger.html" %}
+  {% if flash %}{{ flash.reander() | safe }}{% endif %}
 
   <form method="post">
 
-    {% for input in inputs %}
-      <div class="form-group">
-        {% include "partials/text-input.html" %}
-      </div>
+    {% for control in form.controls %}
+      {{ control.render() | safe }}
     {% endfor %}
     
-    <button 
-      class="btn btn-primary btn-block" 
-      type="submit"
-      data-disable-with="保存新密码...">重置密码</button>
+    {{ form.submitBtn.render() | safe }}
   </form>
 
 </div>
