--- a/views/profile/personal.html
+++ b/views/profile/personal.html
@@ -5,39 +5,26 @@
 <section class="mt-3">
   <h5>个人信息</h5>
 
-  {% include "partials/alert-danger.html" %}
+  {% if flash %}{{ flash.render() | safe }}{% endif %}
 
   {% if form %}
   <form method="post">
     <div class="form-row">
-      {% for input in form.nameInputs %}
-        <div class="form-group col-md-6">
-          {% include "partials/text-input.html" %}
-        </div>
-      {% endfor %}
-
+      {{ form.familyName.render() | safe }}
+      {{ form.givenName.render() | safe }}
     </div>
 
-    {% if form.genderRadio %}
-      {% set radio = form.genderRadio %}
-      <div class="form-group">
-        {% include "partials/radio.html" %}
-      </div>
-    {% endif %}
+    <div class="form-group">
+      <label class="form-label">性别</label>
+      {{ form.genderMale.render() | safe }}
+      {{ form.genderFemale.render() | safe }}
+    </div>
 
-    {% if form.birthdayInput %}
-      {% set input = form.birthdayInput %}
-      <div class="form-group">
-        {% include "partials/text-input.html" %}
-      </div>
-    {% endif %}
+    {{ form.birthday.render() | safe }}
 
-    <button
-      type="submit"
-      data-disable-with="保存..."
-      class="btn btn-primary">保存</button>
+    {{ form.submitBtn.render() | safe }}
   </form>
-  {% endif %}  
+  {% endif %}
 </section>
 
 
