--- a/views/signup.html
+++ b/views/signup.html
@@ -8,7 +8,9 @@
   <form method="post">
   
     {% for control in form.controls %}
-      {{ control.render() | safe }}
+      <div class="form-group">
+        {{ control.render() | safe }}
+      </div>
     {% endfor %}
   
     {{ form.submitBtn.render() | safe }}
