--- a/views/forgot-password/enter-email.html
+++ b/views/forgot-password/enter-email.html
@@ -11,7 +11,7 @@
   {% if done %}
     <div>{{ done.message }}</div>
     {% if done.link %}
-    <a class="btn btn-primary btn-block mt-2" href="{{ done.link.href }}">{{ done.link.text }}</a>
+      <a class="btn btn-primary btn-block mt-2" href="{{ done.link.href }}">{{ done.link.text }}</a>
     {% endif %}
   {% endif %}
 
@@ -19,7 +19,9 @@
   <form method="post">
 
     {% for control in form.controls %}
-      {{ control.render() | safe }}
+      <div class="form-group">
+        {{ control.render() | safe }}
+      </div>
     {% endfor %}
 
     {{ form.submitBtn.render() | safe }}
