--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -10,7 +10,9 @@
   <form method="post">
 
     {% for control in form.controls %}
-      {{ control.render() | safe }}
+      <div class="form-group">
+        {{ control.render() | safe }}
+      </div>
     {% endfor %}
     
     {{ form.submitBtn.render() | safe }}
