--- a/views/profile/address.html
+++ b/views/profile/address.html
@@ -5,31 +5,33 @@
   <div class="mt-3">
     <h5>地址</h5>
 
-    {% include "partials/alert-danger.html" %}
-
+    {% if form %}
     <form method="post">
-
-      {% for row in formRows %}
-        <div class="form-row">
-          {% for input in row %}
-            <div class="form-group
-            {% if input.col %}
-              col-md-{{ input.col }}
-            {% else %}
-              col-12
-            {% endif %}">
-              {% include "partials/text-input.html" %}
-            </div>
-          {% endfor %}
+      <div class="form-group">
+        {{ form.country.render() | safe }}
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          {{ form.province.render() | safe }}
         </div>
-      {% endfor %}
+        <div class="form-group col-md-4">
+          {{ form.city.render() | safe }}
+        </div>
+        <div class="form-group col-md-4">
+          {{ form.district.render() | safe }}
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-10">
+          {{ form.street.render() | safe }}
+        </div>
+        <div class="form-group col-md-2">
+          {{ form.postcode.render() | safe }}
+        </div>
+      </div>
       
-      <button
-        type="submit"
-        data-disable-with="保存..."
-        class="btn btn-primary">保存</button>
-    </form>    
+      {{ form.submitBtn.render() | safe }}
+    </form>
+    {% endif %}   
   </div>
-
-
 {% endblock %}
