--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -17,21 +17,23 @@
   </div>
 
   {% else %}
+    
   <div class="mt-3 mb-3 pb-3 border-bottom">
-    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-      <span class="mr-auto">用户名</span>
-      <span class="pl-2 pr-2">{{profile.userName}}</span>
-      <a href="{{ profile.updateNameLink }}" class="pl-2 pr-2">修改</a>
-    </div>
+    {% if profile %}
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span class="mr-auto">用户名</span>
+        <span class="pl-2 pr-2">{{profile.userName}}</span>
+        <a href="{{ link.displayName }}" class="pl-2 pr-2">修改</a>
+      </div>
 
-    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-      <span class="mr-auto">手机号码</span>
-      <span class="pl-2 pr-2">{{profile.mobile}}</span>
-      <a href="{{ profile.updateMobileLink }}" class="pl-2 pr-2">修改</a>
-    </div>
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span class="mr-auto">手机号码</span>
+        <span class="pl-2 pr-2">{{profile.mobile}}</span>
+        <a href="{{ link.mobile }}" class="pl-2 pr-2">修改</a>
+      </div>
 
-    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-      <div class="pr-2 flex-grow-1">
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <div class="pr-2 flex-grow-1">
           <div class="d-flex justify-content-between mb-3">
             <span>姓名</span>
             <span class="pl-2">{{profile.familyName}} {{profile.givenName}}</span>
@@ -46,10 +48,12 @@
             <span>生日</span>
             <span class="pl-2">{{profile.birthday}}</span>
           </div>
+        </div>
+        <a href="{{ link.personal }}" class="align-self-center pl-2 pr-2">修改</a>
       </div>
-      <a href="{{ profile.updateInfoLink }}" class="align-self-center pl-2 pr-2">修改</a>
-    </div>
+    {% endif %}
 
+    {% if address %}
     <div class="d-flex justify-content-between">
       <span class="mr-auto">地址</span>
       <div class="pl-2 pr-2">
@@ -66,8 +70,9 @@
             <span>{{address.postcode}}</span>
         </div>
       </div>
-      <a href="/profile/address" class="pl-2 pr-2">修改</a>
+      <a href="{{ link.address }}" class="pl-2 pr-2">修改</a>
     </div>
+    {% endif %}
   </div>
   {% endif %}
 {% endblock %}
