--- a/views/profile/single-input.html
+++ b/views/profile/single-input.html
@@ -4,20 +4,17 @@
 
 <section class="mt-3">
   <h5>{{ heading }}</h5>
-
-  {% include "partials/alert-danger.html" %}
   
-  {% if input %}
+  {% if form %}
   <form method="post">
 
+    {% for control in form.controls %}
       <div class="form-group">
-        {% include "partials/text-input.html" %}
+        {{ control.render() | safe }}
       </div>
+    {% endfor %}
     
-    <button 
-      type="submit" 
-      data-disable-with="保存..."
-      class="btn btn-primary">保存</button>
+    {{ form.submitBtn.render() | safe }}
   </form>
   {% endif %}
 </section>
