--- a/views/account/account.html
+++ b/views/account/account.html
@@ -9,21 +9,30 @@
 
     {% for section in sections %}
       <div class="mt-3 pb-3 mb-3">
-        {% if section.heading %}
-          <h5 class="pb-2 border-bottom">{{ section.heading }}</h5>
-        {% endif %}
 
-        {% for item in section.items %}
-        <div class="d-flex justify-content-between mb-3 pb-3{% if not loop.last %} border-bottom{% endif %}">
-            <span class="mr-auto">{{ item.label }}</span>
-
-            {% if item.value %}
-              <span class="pl-2 pr-2">{{ item.value }}</span>
-            {% endif %}
-
-            <a href="{{ item.link }}" class="pl-2 pr-2">{{ item.linkText if item.linkText else "修改" }}</a>
+        <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+          <span class="mr-auto">登录邮箱</span>
+          <span class="pl-2 pr-2">{{user.email}}</span>
+          <a href="{{ link.email }}" class="pl-2 pr-2">修改</a>
         </div>
-        {% endfor %}
+
+        <div class="d-flex justify-content-between mb-3 pb-3">
+          <span class="mr-auto">密码</span>
+          <a href="{{ link.password }}" class="pl-2 pr-2">修改</a>
+        </div>
+
+        <h5 class="pb-2 border-bottom">账号绑定</h5>
+
+        <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+          <span class="mr-auto">微信
+          </span>
+
+          {% if user.isLinked() %}
+            <span class="pl-2 pr-2">已绑定 {{ user.wechat.nickname }}</span>
+          {% endif %}
+
+          <a href="{{ link.wechat }}" class="pl-2 pr-2">{% if user.isLinked() %}解除绑定{% else %}尚未绑定{% endif %}</a>
+        </div>
 
       </div>
     {% endfor %}
