--- a/views/account/password.html
+++ b/views/account/password.html
@@ -1,28 +1,21 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/two-cols.html" %}
 
 {% block content %}
 
-  <section class="mt-3">
-    <h5>更改密码</h5>
+<section class="mt-3">
+  <h5>{{ heading }}</h5>
 
-    <form method="post">
+  <form method="post">
 
-      {% for input in inputs %}
-        <div class="form-group">
-            {% include "partials/text-input.html" %}
-        </div>
-      {% endfor %}
-      
-      <div class="d-flex justify-content-between">
-        <button
-          type="submit"
-          data-disable-with="保存..."
-          class="btn btn-primary">保存密码</button>
+    {% for controls in form.controls %}
+    <div class="form-group">
+      {{ control.render() | safe }}
+    </div>
+    {% endfor %}
 
-        <a href="{{ passwordResetLink }}" target="_blank">忘记密码？</a>
-      </div>
-      
-    </form>    
-  </section>
+    {{ form.submitBtn.render() | safe }}
+
+  </form>
+</section>
 
 {% endblock %}
