--- a/views/subscription/plan.html
+++ b/views/subscription/plan.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <small class="form-text text-muted">以后随时可以更改或升级会员资格</small>
-      <a class="btn btn-primary" href="{{sitemap.email}}">跳过</button>
+      <a class="btn btn-primary" href="{{sitemap.email}}">跳过</a>
     </form>    
   </div>
 </div>
