--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -7,6 +7,7 @@
 
   {% if flash %}{{ flash.reander() | safe }}{% endif %}
 
+  {% if form %}
   <form method="post">
 
     {% for control in form.controls %}
@@ -17,7 +18,7 @@
     
     {{ form.submitBtn.render() | safe }}
   </form>
-
+  {% endif %}
 </div>
   
 {% endblock %}
