renamce two-cols.html to content.html

--- a/views/account/password.html
+++ b/views/account/password.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %}
+{% extends "layouts/content.html" %}
 
 {% block content %}
 
@@ -8,9 +8,7 @@
   <form method="post">
 
     {% for controls in form.controls %}
-    <div class="form-group">
       {{ control.render() | safe }}
-    </div>
     {% endfor %}
 
     {{ form.submitBtn.render() | safe }}
