--- a/views/account/unlink.html
+++ b/views/account/unlink.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
   <h2 class="mt-3 mb-5">解除账号绑定</h2>
