--- a/views/account/account.html
+++ b/views/account/account.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
   {% if user.isWxOnly() %}
@@ -7,35 +7,33 @@
     </div>
   {% else %}
 
-    {% for section in sections %}
-      <div class="mt-3 pb-3 mb-3">
+    <div class="mt-3 pb-3 mb-3">
 
-        <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-          <span class="mr-auto">登录邮箱</span>
-          <span class="pl-2 pr-2">{{user.email}}</span>
-          <a href="{{ link.email }}" class="pl-2 pr-2">修改</a>
-        </div>
-
-        <div class="d-flex justify-content-between mb-3 pb-3">
-          <span class="mr-auto">密码</span>
-          <a href="{{ link.password }}" class="pl-2 pr-2">修改</a>
-        </div>
-
-        <h5 class="pb-2 border-bottom">账号绑定</h5>
-
-        <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-          <span class="mr-auto">微信
-          </span>
-
-          {% if user.isLinked() %}
-            <span class="pl-2 pr-2">已绑定 {{ user.wechat.nickname }}</span>
-          {% endif %}
-
-          <a href="{{ link.wechat }}" class="pl-2 pr-2">{% if user.isLinked() %}解除绑定{% else %}尚未绑定{% endif %}</a>
-        </div>
-
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span class="mr-auto">登录邮箱</span>
+        <span class="pl-2 pr-2">{{user.email}}</span>
+        <a href="{{ link.email }}" class="pl-2 pr-2">修改</a>
       </div>
-    {% endfor %}
+
+      <div class="d-flex justify-content-between mb-3 pb-3">
+        <span class="mr-auto">密码</span>
+        <a href="{{ link.password }}" class="pl-2 pr-2">修改</a>
+      </div>
+
+      <h5 class="pb-2 border-bottom">账号绑定</h5>
+
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span class="mr-auto">微信
+        </span>
+
+        {% if user.isLinked() %}
+          <span class="pl-2 pr-2">已绑定 {{ user.wechat.nickname }}</span>
+        {% endif %}
+
+        <a href="{{ link.wechat }}" class="pl-2 pr-2">{% if user.isLinked() %}解除绑定{% else %}尚未绑定{% endif %}</a>
+      </div>
+
+    </div>
 
   {% endif %}
 {% endblock %}
