--- a/views/account/merge.html
+++ b/views/account/merge.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
   <h2 class="mt-3 mb-5">绑定账号</h2>
