--- a/views/profile/personal.html
+++ b/views/profile/personal.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
 
@@ -10,27 +10,17 @@
   {% if form %}
   <form method="post">
     <div class="form-row">
-      <div class="form-group col-md-6">
-        {{ form.familyName.render() | safe }}
-      </div>
-      <div class="form-group col-md-6">
-        {{ form.givenName.render() | safe }}
-      </div>
+      {{ form.familyName.render() | safe }}
+      {{ form.givenName.render() | safe }}
     </div>
 
     <div class="form-group">
       <label class="form-label">性别</label>
-      <div class="form-check">
-        {{ form.genderMale.render() | safe }}
-      </div>
-      <div class="form-check">
-        {{ form.genderFemale.render() | safe }}
-      </div>
+      {{ form.genderMale.render() | safe }}
+      {{ form.genderFemale.render() | safe }}
     </div>
 
-    <div class="form-group">
-      {{ form.birthday.render() | safe }}
-    </div>
+    {{ form.birthday.render() | safe }}
     
     {{ form.submitBtn.render() | safe }}
   </form>
