--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
   {% if user.isWxOnly() %}
@@ -23,13 +23,13 @@
       <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
         <span class="mr-auto">用户名</span>
         <span class="pl-2 pr-2">{{profile.userName}}</span>
-        <a href="{{ link.displayName }}" class="pl-2 pr-2">修改</a>
+        <a href="{{ links.displayName }}" class="pl-2 pr-2">修改</a>
       </div>
 
       <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
         <span class="mr-auto">手机号码</span>
         <span class="pl-2 pr-2">{{profile.mobile}}</span>
-        <a href="{{ link.mobile }}" class="pl-2 pr-2">修改</a>
+        <a href="{{ links.mobile }}" class="pl-2 pr-2">修改</a>
       </div>
 
       <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
@@ -49,7 +49,7 @@
             <span class="pl-2">{{profile.birthday}}</span>
           </div>
         </div>
-        <a href="{{ link.personal }}" class="align-self-center pl-2 pr-2">修改</a>
+        <a href="{{ links.personal }}" class="align-self-center pl-2 pr-2">修改</a>
       </div>
     {% endif %}
 
@@ -70,7 +70,7 @@
             <span>{{address.postcode}}</span>
         </div>
       </div>
-      <a href="{{ link.address }}" class="pl-2 pr-2">修改</a>
+      <a href="{{ links.address }}" class="pl-2 pr-2">修改</a>
     </div>
     {% endif %}
   </div>
