--- a/views/subscription/pay.html
+++ b/views/subscription/pay.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %} 
+{% extends "layouts/content.html" %} 
 
 {% block content %}
   <div class="row justify-content-center mt-3">
