--- a/views/subscription/paywall.html
+++ b/views/subscription/paywall.html
@@ -1,4 +1,4 @@
-{% extends "layouts/two-cols.html" %}
+{% extends "layouts/content.html" %}
 
 {% block content %}
 <div class="d-flex justify-content-between">
