--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -12,12 +12,12 @@
 
   <title>{% block title %}用户中心{% endblock %} - FT中文网</title>
   
-  {% if env.isProduction %}
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/{{env.bsVersion}}/css/bootstrap.min.css" rel="stylesheet">
-  {% include "assets/style.html" %}
+  {% if env.isProd %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/{{env.bsVersion}}/css/bootstrap.min.css" rel="stylesheet">
+    {% include "assets/style.html" %}
   {% else %}
-  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/style/main.css">
   {% endif %}
   
 </head>
@@ -72,13 +72,13 @@
     </div>
   </footer>
   
-  {% if env.isProduction %}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/{{env.bsNativeVersion}}/bootstrap-native-v4.min.js"></script>
-  {% include "assets/script.html" %}
+  {% if env.isProd %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/{{env.bsNativeVersion}}/bootstrap-native-v4.min.js"></script>
+    {% include "assets/script.html" %}
 
   {% else %}
-  <script src="/bootstrap.native/dist/bootstrap-native-v4.js"></script>
-  <script src="/script/main.js"></script>
+    <script src="/bootstrap.native/dist/bootstrap-native-v4.js"></script>
+    <script src="/script/main.js"></script>
   {% endif %}
 </body>
 </html>
