--- a/views/android/list.html
+++ b/views/android/list.html
@@ -4,27 +4,29 @@
 
 {% block content %}
 
-<h2>Android历史版本</h2>
+  {% if flash %}{{ flash.render() | safe }}{% endif %}
 
-{% for release in releases %}
+  <h2>Android历史版本</h2>
 
-<h3 class="pt-3 pb-3 border-bottom">{{release.versionName}}</h3>
+  {% for release in releases %}
 
-<div class="mt-3">
-  <a class="btn btn-block btn-primary" href="{{release.apkUrl}}">点击下载 {{release.versionName}}</a>
-</div>
+    <h3 class="pt-3 pb-3 border-bottom">{{release.versionName}}</h3>
 
-<p class="text-muted mt-3">发布时间：{{ release.releaseTimeCST() }}</p>
+    <div class="mt-3">
+      <a class="btn btn-block btn-primary" href="{{release.apkUrl}}">点击下载 {{release.versionName}}</a>
+    </div>
 
-<div class="pb-2 pt-2">
-  <p class="text-muted">更新日志</p>
-  {% markdown %}
-    {{release.body}}
-  {% endmarkdown %}
-</div>
+    <p class="text-muted mt-3">发布时间：{{ release.releaseTimeCST() }}</p>
 
-{% endfor %}
+    <div class="pb-2 pt-2">
+      <p class="text-muted">更新日志</p>
+      {% markdown %}
+        {{release.body}}
+      {% endmarkdown %}
+    </div>
 
-{% include "partials/paging.html" %}
+  {% endfor %}
+
+  {% include "partials/paging.html" %}
 
 {% endblock %}
