--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -1,78 +1,27 @@
 {% extends "layouts/content.html" %} 
 
 {% block content %}
-  {% if user.isWxOnly() %}
-  <div class="row justify-content-center mt-4">
-    <div class="col-md-6 text-center">
-      <h4>微信用户</h4>
-    
-      <figure class="figure">
-        <img class="figure-img img-fluid rounded" src="{{ user.wechat.avatarUrl }}" alt="">
-        <figcaption class="figure-caption">{{ user.wechat.nickname }}</figcaption>
-      </figure>
-    
-      {% include "partials/urge-link.html" %}
+  {% if isWxOnly %}
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <h4>微信用户</h4>
+      
+        <figure class="figure">
+          <img class="figure-img img-fluid rounded" src="{{ wechat.avatarUrl }}" alt="">
+          <figcaption class="figure-caption">{{ wechat.nickname }}</figcaption>
+        </figure>
+      
+        {% include "partials/urge-link.html" %}
 
+      </div>
     </div>
-  </div>
 
   {% else %}
     
-  <div class="mt-3 mb-3 pb-3 border-bottom">
-    {% if profile %}
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span class="mr-auto">用户名</span>
-        <span class="pl-2 pr-2">{{profile.userName}}</span>
-        <a href="{{ links.displayName }}" class="pl-2 pr-2">修改</a>
-      </div>
+  {% for row in rows %}
+    {% include "partials/table-row.html" %}
+  {% endfor %}
 
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span class="mr-auto">手机号码</span>
-        <span class="pl-2 pr-2">{{profile.mobile}}</span>
-        <a href="{{ links.mobile }}" class="pl-2 pr-2">修改</a>
-      </div>
-
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <div class="pr-2 flex-grow-1">
-          <div class="d-flex justify-content-between mb-3">
-            <span>姓名</span>
-            <span class="pl-2">{{profile.familyName}} {{profile.givenName}}</span>
-          </div>
-
-          <div class="d-flex justify-content-between mb-3">
-            <span>性别</span>
-            <span class="pl-2">{{ profile.genderCN }}</span>
-          </div>
-
-          <div class="d-flex justify-content-between">
-            <span>生日</span>
-            <span class="pl-2">{{profile.birthday}}</span>
-          </div>
-        </div>
-        <a href="{{ links.personal }}" class="align-self-center pl-2 pr-2">修改</a>
-      </div>
-    {% endif %}
-
-    {% if address %}
-    <div class="d-flex justify-content-between">
-      <span class="mr-auto">地址</span>
-      <div class="pl-2 pr-2">
-        <div class="text-right">
-            <span>{{address.country}}</span>
-            <span>{{address.province}}</span>
-            <span>{{address.city}}</span>
-            <span>{{address.district}}</span>
-        </div>
-        <div class="text-right">
-            <span>{{address.street}}</span>
-        </div>
-        <div class="text-right">
-            <span>{{address.postcode}}</span>
-        </div>
-      </div>
-      <a href="{{ links.address }}" class="pl-2 pr-2">修改</a>
-    </div>
-    {% endif %}
-  </div>
   {% endif %}
+
 {% endblock %}
