--- a/views/single-input.html
+++ b/views/single-input.html
@@ -1,19 +1,18 @@
-{% extends "layouts/content.html" %}
+{% extends "layouts/content.html" %} 
 
 {% block content %}
 
-<section class="mt-3">
-  <h5>{{ heading }}</h5>
-
+<h5>{{ heading }}</h5>
+  
+{% if form %}
   <form method="post">
 
-    {% for controls in form.controls %}
+    {% for control in form.controls %}
       {{ control.render() | safe }}
     {% endfor %}
-
+    
     {{ form.submitBtn.render() | safe }}
-
   </form>
-</section>
+{% endif %}
 
 {% endblock %}
