--- a/views/subscription/pay.html
+++ b/views/subscription/pay.html
@@ -1,7 +1,7 @@
 {% extends "layouts/content.html" %} 
 
 {% block content %}
-  <div class="row justify-content-center mt-3">
+  <div class="row justify-content-center">
     <div class="col-sm-6">
 
       <div class="card mb-5">
