--- a/views/partials/card.html
+++ b/views/partials/card.html
@@ -6,8 +6,8 @@
   <ul class="list-group list-group-flush">
     {% for item in card.list %}
     <li class="list-group-item d-flex justify-content-between">
-      <span>{{ item.label }}</span>
-      <span>{{ item.value }}</span>
+      <span>{{ item.primary }}</span>
+      <span>{{ item.secondary }}</span>
     </li>
     {% endfor %}
   </ul>
