--- a/views/link/base-layout.html
+++ b/views/link/base-layout.html
@@ -1,15 +1,18 @@
 {% extends "layouts/content.html" %}
 
 {% block content %}
-<h2 class="mt-3 mb-5">{{ pageTitle }}</h2>
+<h2 class="mt-3 mb-5 text-center">{{ pageTitle }}</h2>
 <div class="row justify-content-center">
-  <div class="col-md-8 text-center">
+  <div class="col-md-8">
 
     {% block extraContent %}{% endblock %}
     
     {% if form %}
     <form method="{{form.method}}" action="{{form.action}}">
-      {% for control in form.controls %} {% endif %} 
+
+      {% for control in form.controls %} 
+        {{ control.render() | safe }}
+      {% endfor %} 
       
       {{ form.submitBtn.render() | safe }}
     </form>
