--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -9,9 +9,9 @@
   {# Show message after password reset letter is sent, or password is reset. #}
 
   {% if done %}
-    <div>{{ done.message }}</div>
+    <div class="text-center">{{ done.message }}</div>
     {% if done.link %}
-      <a class="btn btn-primary btn-block mt-2" href="{{ done.link.href }}">{{ done.link.text }}</a>
+      <a class="btn btn-primary btn-block mt-5" href="{{ done.link.href }}">{{ done.link.text }}</a>
     {% endif %}
   {% endif %}
 
