--- a/views/android/latest.html
+++ b/views/android/latest.html
@@ -6,19 +6,23 @@
   {% if flash %}{{ flash.render() | safe }}{% endif %}
   
   <p class="lead text-center">最新版 {{latest.versionName}}</p>
-  <a href="{{latest.apkUrl}}" class="btn btn-primary btn-block">马上下载</a>
 
-  <hr class="my-4">
+  {% if latest %}
+    {% set release = latest %}
+    <div class="mt-3">
+      <a href="{{latest.apkUrl}}" class="btn btn-primary btn-block">马上下载</a>
+    </div>
+    
+    <hr class="my-4">
 
-  <p>发布时间：{{ latest | toCST }}</p>
+    <p class="text-muted mt-3">发布时间：{{ latest.createdAt | toCST }}</p>
 
-  <p class="text-muted">更新日志</p>
-  {% markdown %}
-    {{ latest.body }}
-  {% endmarkdown %}
+    <div class="pb-2 pt-2 border-bottom">
+      <p class="text-muted">更新日志</p>
+      {% markdown %}
+        {{ latest.body }}
+      {% endmarkdown %}
+    </div>
 
-  <hr class="my-4">
-
-  <p class="text-right"><a href="{{ allReleasesUrl }}">历史版本</a></p>
-
+  {% endif %}
 {% endblock %}
