--- a/views/android.html
+++ b/views/android.html
@@ -1,44 +1,52 @@
-{% extends "layouts/android.html" %}
+{% extends "layouts/base.html" %}
 
-{% block title %}安卓历史版本{% endblock %}
+{% block subBrand %}
+<a class="navbar-text mr-auto" href="{{ globalUrl.androidHome }}">安卓App</a>
+{% endblock %}
 
-{% block content %}
+{% block main %}
 
-  {% if flash %}{{ flash.render() | safe }}{% endif %}
+<div class="row justify-content-center">
+  <div class="col-12 col-lg-6">
+    <div class="mt-4">
+      {% if flash %}{{ flash.render() | safe }}{% endif %}
 
-  <p class="lead text-center">{{ heading }}</p>
+      <p class="lead text-center">{{ heading }}</p>
+        
+      {% for release in releases %}
     
-  {% for release in releases %}
-
-    {% if not isLatest %}
-    <h3 class="pt-3 pb-3 border-bottom">{{release.versionName}}</h3>
-    {% endif %}
-
-    <div class="mt-3">
-      <a class="btn btn-block btn-primary" href="{{release.apkUrl}}">
-        {% if isLatest %}
-          马上下载
-        {% else %}
-          点击下载 {{release.versionName}}
+        {% if not isLatest %}
+        <h3 class="pt-3 pb-3 border-bottom">{{release.versionName}}</h3>
         {% endif %}
-      </a>
+    
+        <div class="mt-3">
+          <a class="btn btn-block btn-primary" href="{{release.apkUrl}}">
+            {% if isLatest %}
+              马上下载
+            {% else %}
+              点击下载 {{release.versionName}}
+            {% endif %}
+          </a>
+        </div>
+    
+        <p class="text-muted mt-3">发布时间：{{ release.createdAt | toCST }}</p>
+    
+        <div class="pb-2 pt-2">
+          <p class="text-muted">更新日志</p>
+          {% markdown %}
+            {{release.body}}
+          {% endmarkdown %}
+        </div>
+    
+      {% endfor %}
+    
+      {% if isLatest %}
+        <p class="text-right"><a href="{{ allReleasesUrl }}">历史版本</a></p>
+      {% else %}
+        {% include "partials/paging.html" %}
+      {% endif %}
     </div>
-
-    <p class="text-muted mt-3">发布时间：{{ release.createdAt | toCST }}</p>
-
-    <div class="pb-2 pt-2">
-      <p class="text-muted">更新日志</p>
-      {% markdown %}
-        {{release.body}}
-      {% endmarkdown %}
-    </div>
-
-  {% endfor %}
-
-  {% if isLatest %}
-    <p class="text-right"><a href="{{ allReleasesUrl }}">历史版本</a></p>
-  {% else %}
-    {% include "partials/paging.html" %}
-  {% endif %}
+  </div>
+</div>
 
 {% endblock %}
