refactor: center title

--- a/views/subscription/membership.html
+++ b/views/subscription/membership.html
@@ -29,7 +29,7 @@
     </div>
   {% else %}
 
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-center mb-3">
       <h2>订阅FT中文网会员</h2>
       {# <a class="btn btn-link" href="{{ sitemap.redeem }}">有礼品卡？</a>#}
     </div>
